<resources>
    <string name="app_name">MoBank</string>

    <!-- Button Texts -->
    <string name="login_btn_text">Login</string>
    <string name="register_btn_text">Register</string>
    <string name="continue_text">Continue</string>
    <string name="finish_text">Finish</string>
    <string name="edit_text">Edit</string>
    <string name="delete_text">Delete</string>
    <string name="update_transaction_text">Update Transaction</string>

    <!-- Input Fields Hints -->
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="name_hint">Name</string>
    <string name="national_id_hint">National ID</string>
    <string name="contact_hint">Contact</string>
    <string name="id_hint">Code</string>
    <string name="amount_hint">Amount</string>
    <string name="time_hint">Time</string>
    <string name="type_hint">Type</string>
    <string name="platform_hint">Platform</string>

    <!-- TextView Texts -->
    <string name="sign_in_text">Sign In</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="have_account_negative_text">Don\'t have an account yet ?</string>
    <string name="have_account_positive_text">Already have an account ?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Title Strings -->
    <string name="customer_details_text">Customer Details</string>
    <string name="transaction_details_text">Transaction Details</string>
    <string name="transactions_text">Transactions</string>
    <string name="transaction_text">Transaction</string>
    <string name="add_transaction_text">Add Transaction</string>
    <string name="edit_transaction_text">Edit Transaction</string>
    <string name="home_text">Home</string>

    <!-- Option Menu Strings -->
    <string name="sign_out_text">Sign Out</string>

    <!-- Platform Names -->
    <string name="m_pesa_text">M-Pesa</string>
    <string name="kcb_text">KCB</string>
    <string name="equity_text">Equity</string>
    <string name="coop_text">Cooperative</string>
    <string name="airtel_text">Airtel</string>
    <string name="telcom_text">Telcom</string>

</resources>